Updated welcome page with How to Play section

--- a/home/templates/home/welcome.html
+++ b/home/templates/home/welcome.html
@@ -33,26 +33,35 @@
             </div>
         </div>
     </div>
-
-    <footer class="pt-4 my-md-5 pt-md-5 border-top ">
-        <div class="row ">
-            <div class="col-12 col-md ">
-                <!--<img class="mb-2 " src=" " " alt=" " width="24 " height="24 ">-->
-                <small class="d-block mb-3 text-muted ">&copy; 2020-2021</small>
-            </div>
-            <div class="col-6 col-md ">
-                <h5>Rules</h5>
-
-            </div>
-            <div class="col-6 col-md ">
-                <h5>Help</h5>
-
-            </div>
-            <div class="col-6 col-md ">
-                <h5>About</h5>
-
+    <div class="card mb-5">
+        <div class="card-header">
+            <div class="d-flex justify-content-center">
+                <h2>How to Play</h2>
             </div>
         </div>
-    </footer>
+        <div class="card-body">
+            <h5 class="card-title">Make Picks</h5>
+            <p class="card-text">Each week, select who you think will win each game. Each pick you guess correctly earns you <strong>25</strong> points. You always want to make your picks because this a free way to earn points without any risk of losing them. Picks will lock
+                15 minutes before the game starts.</p>
+        </div>
+        <div class="card-body">
+            <h5 class="card-title">Place Bets</h5>
+            <p class="card-text">This is where you can use your hard earned points from correct picks to bet on the spread of the game. If you're not sure how to bet on the spread of the game, click the link below. Bet as much or as little as you would like, and keep in mind
+                you do not need to bet on every game. The payout is equal to 1.9X your bet (Multiply bet amount by 1.9). If your bet is incorrect though, you lose the points you put down. Bets will lock 15 minutes before the game starts.
+            </p>
+            <button class="btn btn-green" data-toggle="modal" data-target="#deleteCOnfirm">How to bet</button>
+        </div>
+        <div class="card-body">
+            <h5 class="card-title">Compete in Your League</h5>
+            <p class="card-text">Throughout the season you will be competing with your league to see who can score the most amount of points. The winner of each league will get special account accolades which you can flaunt the following season!
+            </p>
+        </div>
+        <div class="card-body">
+            <p class="card-text">Good luck!</p>
+        </div>
+        <div class="card-body">
+            <p class="card-text">Questions/Issues? Reach out to onsidepickfootball@gmail.com for help.</p>
+        </div>
+    </div>
 </div>
 {% endblock %}
