--- a/home/templates/home/dashboard.html
+++ b/home/templates/home/dashboard.html
@@ -47,6 +47,7 @@
                                         <th scope="col">Position</th>
                                         <th scope="col">Player</th>
                                         <th scope="col">Score</th>
+                                        <th scope="col">Week Change</th>
                                     </tr>
                                 </thead>
                                 <tbody>
@@ -63,6 +64,13 @@
                                         {% endif %}
                                         <td>{{ currentUser.username }}</td>
                                         <td>{{ currentUser.totalScore }}</td>
+                                        {% if currentUser.weeklyGain > 0 %}
+                                        <td class="text-success">+{{ currentUser.weeklyGain }}</td>
+                                        {% elif currentUser.weeklyGain == 0 %}
+                                        <td class="text">+{{ currentUser.weeklyGain }}</td>
+                                        {% else %}
+                                        <td class="text-danger">{{ currentUser.weeklyGain }}</td>
+                                        {% endif %}
                                     </tr>
                                     {% endfor %}
                                 </tbody>
