--- a/bets/templates/bets/bets.html
+++ b/bets/templates/bets/bets.html
@@ -183,8 +183,7 @@
         <h6 class="game-bet-amount">{{ currentGame.gameChoice.betAmount }}</h6>
         {% else %}
         <h6 class="game-bet-amount">0</h6>
-        {% endif %} 
-        {% if currentGame.gameChoice.betWinner == None %}
+        {% endif %} {% if currentGame.gameChoice.betWinner == None %}
         <button class="btn btn-outline-success mr-1 increase-bet-button" type="button" disabled>+</button>
         <button class="btn btn-outline-danger decrease-bet-button" type="button" disabled>-</button> {% else %}
         <button class="btn btn-outline-success mr-1 increase-bet-button" type="button">+</button>
@@ -210,11 +209,10 @@
 <!-- Betting is locked for the current game if we make it here -->
 <div class="d-flex flex-row justify-content-center">
     {% if currentGame.gameChoice.betWinner == currentGame.game.homeTeam %}
-        <div class="col-lg-3 bet-box-locked bet-box-selected text-center">
+    <div class="col-lg-3 bet-box-locked bet-box-selected text-center">
         {% else %}
         <div class="col-lg-3 bet-box-locked text-center">
-        {% endif %} 
-        {% if currentGame.game.homeSpread > 0 %}
+            {% endif %} {% if currentGame.game.homeSpread > 0 %}
             <div>
                 <h6>+{{ currentGame.game.homeSpread }}</h6>
             </div>
@@ -228,7 +226,7 @@
             <div><small>{{ currentGame.game.homeTeam.wins }} - {{ currentGame.game.homeTeam.losses }}</small></div>
         </div>
         <div class="col-lg-2 d-flex flex-column align-items-center justify-content-center text-center p-0">
-            {% if currentGame.game.winner %}
+            {% if currentGame.game.homeScore %}
             <h6>Game Complete</h6>
             <h6>{{ currentGame.gameChoice.betAmount }}</h6>
             {% else %}
@@ -237,12 +235,11 @@
             {% endif %}
             <img class="img-fluid" src="{% static 'media/lock.png' %}" width="30" height="auto">
         </div>
-    {% if currentGame.gameChoice.betWinner == currentGame.game.awayTeam %}
-        <div class="col-lg-3 bet-box-locked bet-box-selected text-center"> 
-        {% else %}
-        <div class="col-lg-3 bet-box-locked text-center">
-        {% endif %} 
-        {% if currentGame.game.awaySpread > 0 %}
+        {% if currentGame.gameChoice.betWinner == currentGame.game.awayTeam %}
+        <div class="col-lg-3 bet-box-locked bet-box-selected text-center">
+            {% else %}
+            <div class="col-lg-3 bet-box-locked text-center">
+                {% endif %} {% if currentGame.game.awaySpread > 0 %}
                 <div>
                     <h6>+{{ currentGame.game.awaySpread }}</h6>
                 </div>
@@ -256,7 +253,7 @@
                 <div><small>{{ currentGame.game.awayTeam.wins }} - {{ currentGame.game.awayTeam.losses }}</small></div>
             </div>
         </div>
-        {% endif %} {% endfor %} 
+        {% endif %} {% endfor %}
         <div class="d-flex flex-row justify-content-center">
             <button class="btn btn-green" id="saveBets">Save Bets</button>
         </div>
