--- a/bets/templates/bets/bets.html
+++ b/bets/templates/bets/bets.html
@@ -223,7 +223,7 @@
             {% endif %}
             <input type="radio" name="{{ currentGame.game.id }}" id="{{ currentGame.game.homeTeam.name }}-bet" value="{{ currentGame.game.homeTeam.name }}" disabled>
             <img class="img-fluid" src="/static/media/{{ currentGame.game.homeTeam.name }}.png" width="60" height="60">
-            <div><small>{{ currentGame.game.homeTeam.wins }} - {{ currentGame.game.homeTeam.losses }}</small></div>
+            <div><small>{{ currentGame.game.homeTeam.wins }} - {{ currentGame.game.homeTeam.losses }} {% if currentGame.game.homeTeam.ties > 0 %} - {{ currentGame.game.homeTeam.ties }} {% endif %}</small></div>
         </div>
         <div class="col-lg-2 d-flex flex-column align-items-center justify-content-center text-center p-0">
             {% if currentGame.game.homeScore %}
@@ -250,7 +250,7 @@
                 {% endif %}
                 <input type="radio" name="{{ currentGame.game.id }}" id="{{ currentGame.game.awayTeam.name }}-bet" value="{{ currentGame.game.awayTeam.name }}" disabled>
                 <img class="img-fluid" src="/static/media/{{ currentGame.game.awayTeam.name }}.png" width="60" height="60">
-                <div><small>{{ currentGame.game.awayTeam.wins }} - {{ currentGame.game.awayTeam.losses }}</small></div>
+                <div><small>{{ currentGame.game.awayTeam.wins }} - {{ currentGame.game.awayTeam.losses }} {% if currentGame.game.awayTeam.ties > 0 %} - {{ currentGame.game.awayTeam.ties }} {% endif %}</small></div>
             </div>
         </div>
         {% endif %} {% endfor %}
