--- a/bets/templates/bets/bets.html
+++ b/bets/templates/bets/bets.html
@@ -51,24 +51,21 @@
 </div>
 {% if gameData %}
 <!-- Total Points Display -->
-<div class="d-flex flex-row justify-content-center">
-    <small class="font-italic">Save your bets at the bottom of the page</small>
-</div>
-<div class="d-flex flex-row justify-content-center mt-2 mb-2">
-    <div class="col-lg-3 point-box text-center">
+<div class="d-flex flex-row justify-content-center float-div mb-2">
+    <div class="col-lg-3 text-center">
         <div class="d-flex flex-row justify-content-center">
-            <small>Point total: </small>
+            <small>Total:</small>
         </div>
         <div class="d-flex flex-row justify-content-center">
             <h6 id="totalPoints"> {{ userScore }}</h6>
         </div>
     </div>
-    <div class="col-lg-2 text-center">
-        <button class="btn btn-light" data-toggle="modal" data-target="#deleteCOnfirm">Help</button>
+    <div class="col-lg-2 d-flex justify-content-center">
+        <button class="btn save-button" id="saveBets">Save Bets</button>
     </div>
-    <div class="col-lg-3 point-box text-center">
+    <div class="col-lg-3 text-center">
         <div class="d-flex flex-row justify-content-center">
-            <small>Available: </small>
+            <small>Available:</small>
         </div>
         <div class="d-flex flex-row justify-content-center">
             <h6 id="pointsToBet" class="mb-0"> {{ userScore }}</h6>
@@ -81,7 +78,7 @@
         <h6>Home Spread</h6>
     </div>
     <div class="col-lg-2 text-muted text-center p-0">
-        <h6>Bet Amount</h6>
+        <button class="btn btn-light" data-toggle="modal" data-target="#deleteCOnfirm">Help</button>
     </div>
     <div class="col-lg-3 text-muted text-center">
         <h6>Away Spread</h6>
@@ -104,7 +101,7 @@
         {% endif %}
         <input type="radio" name="{{ currentGame.game.id }}" id="{{ currentGame.game.homeTeam.name }}-bet" value="{{ currentGame.game.homeTeam.name }}" checked="checked">
         <img class="img-fluid" src="/static/media/{{ currentGame.game.homeTeam.name }}.png" width="60" height="60">
-        <div><small>{{ currentGame.game.homeTeam.wins }} - {{ currentGame.game.homeTeam.losses }}</small></div>
+        <div><small>{{ currentGame.game.homeTeam.wins }} - {{ currentGame.game.homeTeam.losses }} {% if currentGame.game.homeTeam.ties > 0 %} - {{ currentGame.game.homeTeam.ties }} {% endif %}</small></div>
     </div>
     {% else %}
     <div class="col-lg-3 bet-box bet-box-unselected text-center">
@@ -119,17 +116,11 @@
         {% endif %}
         <input type="radio" name="{{ currentGame.game.id }}" id="{{ currentGame.game.homeTeam.name }}-bet" value="{{ currentGame.game.homeTeam.name }}">
         <img class="img-fluid" src="/static/media/{{ currentGame.game.homeTeam.name }}.png" width="60" height="60">
-        <div><small>{{ currentGame.game.homeTeam.wins }} - {{ currentGame.game.homeTeam.losses }}</small></div>
+        <div><small>{{ currentGame.game.homeTeam.wins }} - {{ currentGame.game.homeTeam.losses }} {% if currentGame.game.homeTeam.ties > 0 %} - {{ currentGame.game.homeTeam.ties }} {% endif %}</small></div>
     </div>
     {% endif %}
-    <div class="col-lg-2 text-center mt-4 p-0">
-        <input type="hidden" class="game-bet-amount-input" name="{{ currentGame.game.id }}" id="{{ currentGame.game.id }}-bet" value="{{ currentGame.gameChoice.betAmount }}">
-        <h6 class="game-bet-amount">{{ currentGame.gameChoice.betAmount }}</h6>
-        {% if currentGame.gameChoice.betWinner == None %}
-        <button class="btn btn-outline-success mr-1 increase-bet-button" type="button" disabled>+</button>
-        <button class="btn btn-outline-danger decrease-bet-button" type="button" disabled>-</button> {% else %}
-        <button class="btn btn-outline-success mr-1 increase-bet-button" type="button">+</button>
-        <button class="btn btn-outline-danger decrease-bet-button" type="button">-</button> {% endif %}
+    <div class="col-lg-2 text-center mt-3 p-0">
+        <input type="text" class="bet-amount-input m-2 text-center" aria-label="Point Amount" value="{% if currentGame.gameChoice.betAmount != 0 %}{{ currentGame.gameChoice.betAmount }}{% else%}Bet Amount{%endif %}">
     </div>
     {% if currentGame.gameChoice.betWinner == currentGame.game.awayTeam %}
     <div class="col-lg-3 bet-box bet-box-selected text-center">
@@ -144,7 +135,7 @@
         {% endif %}
         <input type="radio" name="{{ currentGame.game.id }}" id="{{ currentGame.game.awayTeam.name }}-bet" value="{{ currentGame.game.awayTeam.name }}" checked="checked">
         <img class="img-fluid" src="/static/media/{{ currentGame.game.awayTeam.name }}.png" width="60" height="60">
-        <div><small>{{ currentGame.game.awayTeam.wins }} - {{ currentGame.game.awayTeam.losses }}</small></div>
+        <div><small>{{ currentGame.game.awayTeam.wins }} - {{ currentGame.game.awayTeam.losses }} {% if currentGame.game.awayTeam.ties > 0 %} - {{ currentGame.game.awayTeam.ties }} {% endif %}</small></div>
     </div>
     {% else %}
     <div class="col-lg-3 bet-box bet-box-unselected text-center">
@@ -159,7 +150,7 @@
         {% endif %}
         <input type="radio" name="{{ currentGame.game.id }}" id="{{ currentGame.game.awayTeam.name }}-bet" value="{{ currentGame.game.awayTeam.name }}">
         <img class="img-fluid" src="/static/media/{{ currentGame.game.awayTeam.name }}.png" width="60" height="60">
-        <div><small>{{ currentGame.game.awayTeam.wins }} - {{ currentGame.game.awayTeam.losses }}</small></div>
+        <div><small>{{ currentGame.game.awayTeam.wins }} - {{ currentGame.game.awayTeam.losses }} {% if currentGame.game.awayTeam.ties > 0 %} - {{ currentGame.game.awayTeam.ties }} {% endif %}</small></div>
     </div>
     {% endif %}
     <!--Display logic for if a winner has not been selected, this is the default view-->
@@ -176,18 +167,10 @@
         {% endif %}
         <input type="radio" name="{{ currentGame.game.id }}" id="{{ currentGame.game.homeTeam.name }}-bet" value="{{ currentGame.game.homeTeam.name }}">
         <img class="img-fluid" src="/static/media/{{ currentGame.game.homeTeam.name }}.png" width="60" height="60">
-        <div><small>{{ currentGame.game.homeTeam.wins }} - {{ currentGame.game.homeTeam.losses }}</small></div>
+        <div><small>{{ currentGame.game.homeTeam.wins }} - {{ currentGame.game.homeTeam.losses }} {% if currentGame.game.homeTeam.ties > 0 %} - {{ currentGame.game.homeTeam.ties }} {% endif %}</small></div>
     </div>
-    <div class="col-lg-2 text-center mt-4 p-0">
-        <input type="hidden" class="game-bet-amount-input" name="{{ currentGame.game.id }}" id="{{ currentGame.game.id }}-bet" value="{{ currentGame.gameChoice.betAmount }}"> {% if currentGame.gameChoice.betAmount != None %}
-        <h6 class="game-bet-amount">{{ currentGame.gameChoice.betAmount }}</h6>
-        {% else %}
-        <h6 class="game-bet-amount">0</h6>
-        {% endif %} {% if currentGame.gameChoice.betWinner == None %}
-        <button class="btn btn-outline-success mr-1 increase-bet-button" type="button" disabled>+</button>
-        <button class="btn btn-outline-danger decrease-bet-button" type="button" disabled>-</button> {% else %}
-        <button class="btn btn-outline-success mr-1 increase-bet-button" type="button">+</button>
-        <button class="btn btn-outline-danger decrease-bet-button" type="button">-</button> {% endif %}
+    <div class="col-lg-2 text-center mt-3 p-0">
+        <input type="text" class="bet-amount-input m-2 text-center" aria-label="Point Amount" value="{% if currentGame.gameChoice.betAmount != 0 %}{{ currentGame.gameChoice.betAmount }}{% endif %}" placeholder="Bet Amount" disabled>
     </div>
     <div class="col-lg-3 bet-box text-center">
         {% if currentGame.game.awaySpread > 0 %}
@@ -201,7 +184,7 @@
         {% endif %}
         <input type="radio" name="{{ currentGame.game.id }}" id="{{ currentGame.game.awayTeam.name }}-bet" value="{{ currentGame.game.awayTeam.name }}">
         <img class="img-fluid" src="/static/media/{{ currentGame.game.awayTeam.name }}.png" width="60" height="60">
-        <div><small>{{ currentGame.game.awayTeam.wins }} - {{ currentGame.game.awayTeam.losses }}</small></div>
+        <div><small>{{ currentGame.game.awayTeam.wins }} - {{ currentGame.game.awayTeam.losses }} {% if currentGame.game.awayTeam.ties > 0 %} - {{ currentGame.game.awayTeam.ties }} {% endif %}</small></div>
     </div>
     {% endif %}
 </div>
@@ -228,12 +211,11 @@
         <div class="col-lg-2 d-flex flex-column align-items-center justify-content-center text-center p-0">
             {% if currentGame.game.homeScore %}
             <h6>Game Complete</h6>
-            <h6>{{ currentGame.gameChoice.betAmount }}</h6>
             {% else %}
             <h6>Pending Score</h6>
-            <h6 class="game-bet-amount">{{ currentGame.gameChoice.betAmount }}</h6>
             {% endif %}
-            <img class="img-fluid" src="{% static 'media/lock.png' %}" width="30" height="auto">
+            <h6>{{ currentGame.gameChoice.betAmount }}</h6>
+            <img class="img-fluid" src="{% static 'media/lock.png ' %}" width="30" height="auto">
         </div>
         {% if currentGame.gameChoice.betWinner == currentGame.game.awayTeam %}
         <div class="col-lg-3 bet-box-locked bet-box-selected text-center">
@@ -253,11 +235,7 @@
                 <div><small>{{ currentGame.game.awayTeam.wins }} - {{ currentGame.game.awayTeam.losses }} {% if currentGame.game.awayTeam.ties > 0 %} - {{ currentGame.game.awayTeam.ties }} {% endif %}</small></div>
             </div>
         </div>
-        {% endif %} {% endfor %}
-        <div class="d-flex flex-row justify-content-center">
-            <button class="btn btn-green" id="saveBets">Save Bets</button>
-        </div>
-        {% else %}
+        {% endif %} {% endfor %} {% else %}
         <div class="row">
             <div class="col text-center">
                 <h5>This week's games have not yet been entered.</h5>
