--- a/home/templates/home/dashboard.html
+++ b/home/templates/home/dashboard.html
@@ -162,18 +162,18 @@
             <div class="row text-center border-bottom border-gray no-gutters mt-2" id="{{ currentGame.game.id }}">
                 <div class="col-6 text-center">
                     <div class="d-flex justify-content-around align-items-center mb-2">
-                        <div class="col-5">
-                            <img class="" src="/static/media/{{ currentGame.game.awayTeam.name }}.png" width="50" height="50"> {% if currentGame.game.awayScore %} {% if currentGame.game.winner == currentGame.game.awayTeam %}
+                        <div class="col-5 p-0">
+                            <img class="team-logo" src="/static/media/{{ currentGame.game.awayTeam.name }}.png"> {% if currentGame.game.awayScore %} {% if currentGame.game.winner == currentGame.game.awayTeam %}
                             <h6><strong class="text-success">{{ currentGame.game.awayScore }}</strong></h6> {% else %}
                             <h6><strong class="text-danger">{{ currentGame.game.awayScore }}</strong></h6> {% endif %} {% else %}
                             <h5>-</h5>{% endif %}
                             <h6><small>({{ currentGame.game.awayTeam.wins }} - {{ currentGame.game.awayTeam.losses }} {% if currentGame.game.homeTeam.ties > 0 %} - {{ currentGame.game.homeTeam.ties }} {% endif %})</small></h6>
                         </div>
-                        <div class="col-2">
+                        <div class="col p-0">
                             <h4>@</h4>
                         </div>
-                        <div class="col-5">
-                            <img class="" src="/static/media/{{ currentGame.game.homeTeam.name }}.png" width="50" height="50"> {% if currentGame.game.homeScore %} {% if currentGame.game.winner == currentGame.game.homeTeam %}
+                        <div class="col-5 p-0">
+                            <img class="team-logo" src="/static/media/{{ currentGame.game.homeTeam.name }}.png"> {% if currentGame.game.homeScore %} {% if currentGame.game.winner == currentGame.game.homeTeam %}
                             <h6><strong class="text-success">{{ currentGame.game.homeScore }}</strong></h6> {% else %}
                             <h6><strong class="text-danger">{{ currentGame.game.homeScore }}</strong></h6> {% endif %} {% else %}
                             <h5>-</h5>{% endif %}
@@ -187,32 +187,32 @@
                 </div>
                 <div class="col-3 text-center pick">
                     {% if currentGame.game.homeScore %} {% if currentGame.gameChoice.pickWinner %} {% if currentGame.gameChoice.correctPickFlag == True %}
-                    <img src="/static/media/{{ currentGame.gameChoice.pickWinner.name }}.png" width="50" height="50"> {% if week == 1 or week == '1' %}
+                    <img class="team-logo" src="/static/media/{{ currentGame.gameChoice.pickWinner.name }}.png"> {% if week == 1 or week == '1' %}
                     <h6 class="text-success"><strong>+50</strong></h6>
                     {% else %}
                     <h6 class="text-success"><strong>+25</strong></h6>
                     {% endif %} {% else %}
-                    <img src="/static/media/{{ currentGame.gameChoice.pickWinner.name }}.png" width="50" height="50">
+                    <img class="team-logo" src="/static/media/{{ currentGame.gameChoice.pickWinner.name }}.png">
                     <h6 class="text-danger"><strong>+0</strong></h6>
                     {% endif %} {% else %}
                     <h6>No Pick</h6>
                     <h6 class="text-danger"><strong>+0</strong></h6>
                     {% endif %} {% else %} {% if currentGame.gameChoice.pickWinner %}
-                    <img class="" src="/static/media/{{ currentGame.gameChoice.pickWinner.name }}.png" width="50" height="50">{% endif %} {% endif %}
+                    <img class="team-logo" src="/static/media/{{ currentGame.gameChoice.pickWinner.name }}.png">{% endif %} {% endif %}
                 </div>
                 <div class="col-3 text-center bet">
                     {% if currentGame.game.homeScore %} {% if currentGame.gameChoice.betWinner %} {% if currentGame.gameChoice.correctBetFlag == True %}
-                    <img src="/static/media/{{ currentGame.gameChoice.betWinner.name }}.png" width="50" height="50">
+                    <img class="team-logo" src="/static/media/{{ currentGame.gameChoice.betWinner.name }}.png">
                     <h6 class="text-success"><strong>+{{ currentGame.gameChoice.amountWon }}</strong></h6>
                     {% else %}
-                    <img src="/static/media/{{ currentGame.gameChoice.betWinner.name }}.png" width="50" height="50">
+                    <img class="team-logo" src="/static/media/{{ currentGame.gameChoice.betWinner.name }}.png">
                     <h6 class="text-danger"><strong>{{ currentGame.gameChoice.amountWon }}</strong></h6>
                     {% endif %} {% if currentGame.gameChoice.betWinner == currentGame.game.homeTeam %}
                     <h6>({{ currentGame.game.homeSpread|floatformat }}) {{ currentGame.gameChoice.betAmount }}</h6>
                     {% else %}
                     <h6>({{ currentGame.game.awaySpread|floatformat }}) {{ currentGame.gameChoice.betAmount }}</h6>
                     {% endif %} {% endif %} {% else %} {% if currentGame.gameChoice.betWinner %}
-                    <img src="/static/media/{{ currentGame.gameChoice.betWinner.name }}.png" width="50" height="50"> {% if currentGame.gameChoice.betWinner == currentGame.game.homeTeam %}
+                    <img class="team-logo" src="/static/media/{{ currentGame.gameChoice.betWinner.name }}.png"> {% if currentGame.gameChoice.betWinner == currentGame.game.homeTeam %}
                     <h6>({{ currentGame.game.homeSpread|floatformat }}) {{ currentGame.gameChoice.betAmount }}</h6>
                     {% else %}
                     <h6>({{ currentGame.game.awaySpread|floatformat }}) {{ currentGame.gameChoice.betAmount }}</h6>
