--- a/command/templates/command/seasonSettings.html
+++ b/command/templates/command/seasonSettings.html
@@ -5,7 +5,7 @@
     <hr>
     <div class="row">
         <div class="col-md-6">
-            <a href="1/" class="btn btn-green">Game Settings</a>
+            <a href="games/" class="btn btn-green">Game Settings</a>
         </div>
     </div>
     <hr>
